<resources>
    <string name="app_name">My Application</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bluetooth">BluetoothActivity</string>
    <string name="BluetoothText">Bluetooth</string>
    <string name="btnWifi">WiFi</string>
    <string name="btnPlayList">PlayList</string>
    <string name="btnPlayListTest">PlayList</string>
    <string name="title_activity_wifi">WifiActivity</string>
    <string name="title_activity_playlist">PlaylistActivity</string>
    <string name="lv_activity_playlist">LvListView</string>
    <string name="textView2">textView2</string>
    <string name="title_activity_player">PlayerActivity</string>

    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="MyBroadcast">Broadcast</string>
    <string name="title_activity_student">StudentActivity</string>
    <string name="btnStudentActivityText">StudentActivity</string>
    <string name="sname">Name</string>
    <string name="sgrade">Grade</string>
    <string name="btnAddNameText">AddName</string>
    <string name="btnRetrieveStudentsText">Retrieve Students</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drag_drop">DragDropActivity</string>
    <string name="title_activity_titles_fragment">TitlesFragment</string>
    <string name="title_activity_fragment_test_container">FragmentTestContainerActivity</string>
    <string name="title_activity_fragmented">FragmentedActivity</string>
    <string name="title_activity_my_rotate">MyRotateActivity</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_activity_fragment_layout">FragmentLayout</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_stars_holder">StarsHolderActivity</string>

</resources>
